<resources>
    <string name="app_name">GuessTheRacer</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="incorrectdata">Incorrect data</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="prof_photo">Profile photo</string>
    <string name="formula1">Formula 1</string>
    <string name="nascar">NASCAR</string>
    <string name="motogp">MOTO GP</string>
    <string name="start">start</string>
    <string name="profile">Profile</string>
</resources>