<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="48sp"
            android:textColor="@color/white"
            android:text="@string/registration"
            android:fontFamily="@font/f1regular"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:fontFamily="@font/f1regular"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/f1regular"
                android:text="@string/name"
                android:gravity="center"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:fontFamily="@font/f1regular"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/f1regular"
                android:text="@string/login"
                android:gravity="center"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_field"
                android:textColor="@color/black"
                android:fontFamily="@font/f1regular"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/f1regular"
                android:text="@string/password"
                android:gravity="center"/>

            <Button
                android:id="@+id/upload_profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_button_registration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/f1regular"
                android:text="@string/prof_photo"
                android:gravity="center"/>

        </LinearLayout>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:textSize="28dp"
                android:textColor="@color/white"
                android:fontFamily="@font/f1regular"
                android:text="@string/signUp"
                android:gravity="center"
                android:background="#00FFFFFF"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>