<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".HomepageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="30dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="400"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/nascarlogo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#000000"
                android:fontFamily="@font/f1regular"
                android:text="GUESS THE\nRACER"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/upload_profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_button_homepage"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="40"
            android:background="@drawable/f1_preview"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="40"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/f1regular"
            android:text="@string/formula1"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="40"
            android:background="@drawable/nascar_preview"
            android:scaleType="centerInside"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="40"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/f1regular"
            android:text="@string/nascar"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="40"
            android:background="@drawable/motogp_preview"
            android:scaleType="centerInside"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="40"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="@font/f1regular"
            android:text="@string/motogp"
            android:gravity="center"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:fontFamily="@font/f1regular"
            android:textSize="24sp"
            android:background="#00FFFFFF" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>